refactor: unirest → OkHttp，支持外部传入 OkHttpClient
- HTTP 请求从 unirest 迁移到 OkHttp
- SSE 从 HttpURLConnection 迁移到 OkHttp（POST SSE 用 Response.body().source()）
- 构造函数支持外部传入 ObjectMapper + OkHttpClient（复用别的插件实例），null 时兜底创建
- 移除所有 unirest 依赖引用